Adding safetime monitoring.